# cryptoofun

./: .gitignore  LICENSE  README.md  Vagrantfile  package-lock.json
apps/web/: .env.local.template  .eslintrc.json  Dockerfile  cypress.config.js  docker-build-push.cmd  docker-build-push.sh  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/src/: globals.css  middleware.js  scrollbar.css
genproto/nodejs/: hello_pb.d.ts
infra/dev/: init-kind.cmd  init-kind.sh
infra/dev/redpanda/: docker-compose.yml
infra/dev/scylladb/: run.cmd  run.sh
infra/k8s/: deploy.cmd  deploy.ps1  deploy.sh  exec_after_deploy.ps1  exec_after_deploy.sh  init-cluster.cmd  init-cluster.ps1  init-cluster.sh
infra/k8s/networking/: cryptoofun-gateway.yml  cryptoofun-virtualservice.yml  cryptoofun-web-vs.yml
infra/k8s/platform/: cash-wallet.yml  leaderboard.yml  lobby.yml  market-data-streamer.yml  order-processor.yml  portfolio.yml  profile.yml  progression.yml  (+2 more)
postman/collections/: 07f18aad-7c28-4761-9cf3-1c2fb75b6723.json  96489f0d-3109-4579-995d-6cd403e51d96.json  97e60033-9509-418d-8ceb-2d694a31e2f4.json  9ab4a945-135b-42a6-86b0-d627fa304583.json  a84909ab-7622-4623-a17f-064ce44a448b.json  b1fa0666-608a-4a24-85a1-1d69e8df828d.json  f5b0db87-634f-4338-a390-13fb2d0ef993.json
protobuf/: buf.gen.yaml  cash_wallet.proto  common.proto  hello.proto  market_data_streamer.proto  portfolio.proto  profile.proto
testing/: .gitignore
testing/load-testing/: README.md  pyproject.toml  trade_butler_isolated.py
testing/utils/: fake-token-generator.py  pyproject.toml
(+314 files in other folders)
